# Insight_Ingenious_For_Fabric

./: .gitattributes  .gitignore  .platform  .pre-commit-config.local.yaml  .pre-commit-config.local.yaml.bak  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  LAKEHOUSE_SQL_DDL_IMPLEMENTATION.md  README.md  cli.py  converted_notebook.ipynb  dbt_upload_fix_summary.md  fab.py  fast_python_setup.sh  fix_catalog.py  fix_readonly_permissions.ps1  flat_file_ingestion_pyspark_notebook.py  index.html  lakehouse_utils_examples.py  llm_profile.yaml  mkdocs.yml  notebook.ipynb  orders.csv  package-lock.json  package.json  path_prep_for_local_testing.py  publish.py  pyproject.toml  python_injection_example.py  python_injection_final_summary.md  register_delta_tables.py  run_processor_directly.py  serve-docs.sh  sitemap.xml  synapse_sync_logic.py  test.ipynb  test.py  test2 copy.py  (+29 more)
.claude/: README.md  config.json  settings.local.json
.claude/agents/: python-app-creator.md  table-documentation-specialist.md
.claude/commands/: analyze-table.sh  analyze_table.py  batch-status.sh  comprehensive_table_analysis.md  execute_prompt.py  research-table.sh  table_documentation_model.py  update-table-docs.sh  update_table_docs.py  validate-all-docs.py  validate-all-docs.sh
.claude/hooks/: post-metadata-update.sh.bak  table_analysis_hook.py.bak
.claude/prompts/: README.md  batch-table-research.md  single-table-research.md  table_analysis_quick_start.md
.claude/sessions/: .current-session  2025-01-19-1455.md  2025-01-27-1149.md  2025-01-27-2223.md  2025-07-19-1102.md  2025-07-21-0623.md  2025-07-23-postgres-metastore-setup.md  2025-07-23-variable-updates.md  2025-07-25-0924.md  2025-07-25-1028.md  2025-07-25-1055-ddl-notebook-testing.md  2025-07-27-0841.md  2025-08-21-0658.md  2025-08-21-1100-DataProfiling_Updates.md  DataProfiling.md
.devcontainer/codex/: devcontainer.json
.devcontainer/spark/: devcontainer.json  spark.dockerfile
.devcontainer/spark_minimal/: devcontainer.json  readme.md  spark.dockerfile
.github/: copilot-instructions.md  ruleset.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/chatmodes/: Plan.chatmode.md  Query.chatmode.md
.github/workflows/: SETUP.md  docs.yml
.pre-commit-cache/: db.db
AUDIT_REPORT/: index.html
DOCUMENTATION_AUDIT_REPORT/: index.html
_includes/developer_setup/: index.html
_includes/environment_setup/: index.html
_includes/pip_install/: index.html
api/: index.html
api/python_apis/: index.html
assets/stylesheets/: extra.css
ddl_scripts/: notebook_generator.py
ddl_scripts/_templates/: nb_cell_markdown.py.jinja  nb_cell_python.py.jinja
developer_guide/: index.html
developer_guide/dbt_profile_manager/: index.html
developer_guide/ddl_scripts/: index.html
developer_guide/notebook_utils/: index.html
developer_guide/pip_install_testing/: index.html
developer_guide/python_libraries/: index.html
developer_guide/sql_templates/: index.html
developer_guide/variable_replacement/: index.html
docs/: AUDIT_REPORT.md  DOCUMENTATION_AUDIT_REPORT.md  README.md  SITEMAP.md  index.md  lakesail_integration.md
docs/_includes/: developer_setup.md  environment_setup.md  pip_install.md  quick_install.md
docs/ai-instructions/: AGENTS.md  GEMINI.md  documentation_review.md  package_extracts_create.md  package_ingest_refine_lakehouse.md  package_ingest_refine_warehouse.md
docs/api/: cli_commands.md  index.md  python_apis.md
docs/data/: bundle.yml
docs/developer_guide/: dbt_profile_manager.md  ddl_scripts.md  index.md  lakehouse_sql_endpoint_ddl.md  notebook_utils.md  packages.md  pip_install_testing.md  python_libraries.md  sql_templates.md  variable_replacement.md
docs/examples/: data_profiling_examples.md  flat_file_ingestion.md  index.md  sample_project.md  templates.md
docs/getting-started/: first-project.md  installation.md  quick-start.md
docs/guides/: cicd-deployment.md  cli-reference.md  common-tasks.md  deployment.md  devops_configuration.md  github-configuration.md  github_configuration.md  index.md  packages.md  troubleshooting.md  workflows.md
docs/migration/: profiling_migration_guide.md
docs/reference/: environment-variables.md  index.md  workspace-layout.md
docs/training/: index.md
examples/: data_profiling_example.py  dbt_dag_utilities_demo.ipynb  dbt_dynamic_loading_example.ipynb  index.html  notebook_utils_example.py  source_handling_demo.ipynb
guides/: index.html
ingen_fab/: __init__.py  cli.py  project_config.py
metastore_db/: db.lck  service.properties
project_templates/: README copy.md  README.md
prompts/: documentation_review.md  package_extracts_create.md  package_ingest_refine.md  package_ingest_refine_lakehouse.md  package_ingest_refine_warehouse.md  package_profile_create.md
reference/: index.html
sample_project/: README.md  platform_manifest.yml  platform_manifest_development.yml  platform_manifest_development_jr.yml  platform_manifest_local.yml  project.yml
scripts/: add_fabric_service_principal_livy_permissions.py  clean_workspace.py  codex_environment_build.sh  create_fabric_service_principal.py  generate_cli_help_snippets.py  install_sql_server.sh  refresh_cli_help.sh  run_simple_notebook.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
tbf/: INTERFACE_ALIGNMENT_ANALYSIS.md  converted_notebook.ipynb  fab.py  publish.py
test_data/: README.md  daily_sales_20250107.csv  daily_sales_20250108.csv  daily_sales_20250109.csv  test_daily_sales.py
tests/: conftest.py  test2.py  test_config_utils.py  test_fabric_cli_notebook.py  test_filesystem_extractor.py  test_filesystem_extractor_watermark.py  test_lakehouse_utils.py  test_lakehouse_utils_providers.py  test_notebook_utils_abstraction.py  test_project_config.py  test_promotion_utils.py  test_reusable_function.py  test_simple_notebook.py  test_simple_notebook_live.py  test_spark_session_factory.py  test_sql_templates.py  test_tiered_profiler_integration.py  test_warehouse_utils.py
user_guide/: index.html
(+978 files in other folders)
