[project]
name = "insight-ingenious-for-fabric"
version = "0.1.0"
description = "Accelerator for building Microsoft Fabric Applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2",
    "typer==0.16.0",
    "requests>=2.32.3",
    "pyodbc>=5.2.0",
    "pandas>=2.3.0",
    "deltalake==1.0.2",
    "pyarrow==20.0.0",
    "azure-cli==2.76.0",
    "fabric_cicd @ https://github.com/jrampono/fabric-cicd/archive/refs/tags/v0.0.1.tar.gz",
    "azure-storage-file-datalake==12.21.0",
    "azure-storage-blob>=12.26.0",
    "lazy-import>=0.2.2",
    "sqlglot>=25.30.2",
    "psycopg2-binary>=2.9.9",
    "azure-identity>=1.23.0",
    "faker>=37.4.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.11.10",
    "ty>=0.0.1a11",
    "vulture>=2.14",
    "pyodbc==5.2.0",
    "pyspark==4.0.0",
    "delta-spark==4.0.0",
    "pytest-clarity==1.0.1",
    "pytest-sugar==1.0.0",
    "nest-asyncio==1.6.0",
    "mypy>=1.18.2",
    "types-pyyaml>=6.0.12.20250809",
    "types-requests>=2.32.4.20250913",
    "pandas-stubs>=2.3.2.250926",
]

dbt = [
    "dbt-fabricsparknb @ git+https://github.com/Insight-Services-APAC/APAC-Capability-DAI-DbtFabricSparkNb.git@dev-jr-upgrading-to-dbt-v1.9+"
]

docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.15",
    "mkdocs-drawio==1.11.2",
    "mkdocs-macros-plugin==1.3.7",
    "mkdocs-nav-weight==0.2.0",
    "mkdocs-redirects==1.2.2",
    "mkdocs-table-reader-plugin==3.1.0",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mkdocs-minify-plugin==0.8.0",
    "mike==2.1.3"
]

[project.optional-dependencies]
dataprep = [
    "scrapfly-sdk==0.8.23",
    "python-dotenv==1.0.1",
    "backoff==2.2"
]

tests = [
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "pytest-timeout==2.4.0",
  "pytest-mock==3.14.0",
  "pytest-cov==6.1.1",
  "pre-commit==4.2.0",
  "ruff==0.11.10",
  "vulture==2.14",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingen_fab*"]
exclude = [".pre-commit-cache*", "*.pre-commit-cache*"]

[tool.setuptools.package-data]
ingen_fab = ["**/*.json", "**/*.jinja", "**/*.jinja2", "**/*.sql", "**/*.py", "**/*.md", "**/*.yml", "**/*.yaml", "**/.platform", "project_templates/**/*.txt", "project_templates/**/.gitignore"]

[project.scripts]
ingen_fab = "ingen_fab.cli:app"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E402"]

[tool.ruff]
line-length = 120
exclude = [
    "sample_project",
    "project_templates",
    "tbf",
    "test.ipynb",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "e2e: live network integration test (requires SCRAPFLY_API_KEY)",
]

[tool.flake8]
max-line-length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true
exclude = [
    "sample_project/",
    "project_templates/",
    "tbf/",
    "test\\.ipynb",
    ".venv/",
]

[[tool.mypy.overrides]]
module = [
    "nbformat.*",
    "nbformat",
    "ingen_fab.python_libs_tests.*",
    "ingen_fab.packages.*",
    "ingen_fab.notebook_utils.*",
    "ingen_fab.config_utils.*",
    "ingen_fab.ddl_scripts.*",
    "ingen_fab.python_libs.python.*",
    "ingen_fab.python_libs.pyspark.*",
    "ingen_fab.python_libs.common.*",
    "ingen_fab.cli_utils.*",
    "ingen_fab.fabric_api.*",
    "tests.*",
]
ignore_missing_imports = true
ignore_errors = true
